En clase calculadora: se definió la clase como genérica y el StackFactory se definió de tipo <Integer> En las clases hijas de AbstractList se cambiaron los métodos a addFirst En StackList ya no se importó java.util.list y se cambiaron todos los métodos de los propios de stack a list